<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".LoginActivity">
	
	
	<LinearLayout android:id="@+id/login_linear_layout"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		
		android:paddingLeft="25dp"
		android:paddingRight="25dp"
		
		android:orientation="vertical"
		tools:layout_editor_absoluteX="1dp"
		tools:layout_editor_absoluteY="1dp">
		
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			
			android:gravity="center"
			
			android:textSize="30dp"
			
			android:text="REGÍSTRATE" />
		
		<EditText android:id="@+id/login_email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			
			android:layout_marginTop="40dp"
			android:hint="@string/login_email"
			
			android:drawableStart="@drawable/ic_baseline_alternate_email_24"
			android:drawablePadding="15dp"
			
			android:inputType="textEmailAddress" />
		
		<EditText android:id="@+id/login_password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			
			android:layout_marginTop="20dp"
			android:hint="@string/login_password"
			
			android:drawableStart="@drawable/ic_baseline_vpn_key_24"
			android:drawablePadding="15dp"
			
			android:inputType="textPassword" />
		
		<Button android:id="@+id/login_login_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			
			android:layout_marginTop="55dp"
			
			android:text="@string/login_login_button"
			/>
		
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			
			android:gravity="center"
			
			
			android:layout_marginTop="10dp"
			android:textColor="@color/link"
			
			android:text="¿Ya tienes cuenta? ¡Inicia sesión!"
			/>
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>