<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListComponents">

    <RelativeLayout
        android:id="@+id/contenedor4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contenedor3">

        <TextView
            android:id="@+id/item4_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/item4_image"
            android:text="@string/cargando"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/item4_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item4_image"
            android:layout_alignStart="@+id/item4_image"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_currency"
            android:text="@string/cargando"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/item4_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:srcCompat="@tools:sample/avatars" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/iconarrow"
        android:layout_width="38dp"
        android:layout_height="35dp"
        android:layout_margin="15dp"

        android:contentDescription="@string/go_back"
        app:layout_constraintBottom_toTopOf="@id/select_your_component"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"

        />


    <TextView
        android:id="@+id/select_your_component"
        android:text="@string/select_your_component"
        android:contentDescription="@string/select_your_component"

        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconarrow"

        />

    <RelativeLayout
        android:id="@+id/contenedor1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_your_component">

        <ImageView
            android:id="@+id/item1_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/item1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/item1_image"
            android:text="@string/cargando"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/item1_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_below="@+id/item1_image"
            android:layout_alignStart="@+id/item1_image"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_currency"
            android:text="@string/cargando"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/contenedor2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contenedor1">

        <ImageView
            android:id="@+id/item2_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/item2_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/item2_image"
            android:text="@string/cargando"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/item2_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item2_image"


            android:layout_alignStart="@+id/item2_image"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_currency"
            android:text="@string/cargando"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/contenedor3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contenedor2">

        <ImageView
            android:id="@+id/item3_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/item3_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/item3_image"
            android:text="@string/cargando"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/item3_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item3_image"


            android:layout_alignStart="@+id/item3_image"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_currency"
            android:text="@string/cargando"
            android:textSize="16sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>